# sps_genai

./: pyproject.toml
Assignment1/: .dockerignore  Dockerfile  main.py  pyproject.toml
Assignment1/app/: main.py
